<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="using_categories_in_root_screen"
    android:title="@string/settings_prefscreen_title"
    android:summary="settings_prefscreen_summary">
    
    <PreferenceCategory 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="subscriptionoptions_topic_newstopic"
        android:title="@string/title_newstopic">
        
        <CheckBoxPreference
            android:key="subscriptionoptions_usmarkets"
            android:title="@string/title_usmarkets" android:enabled="false" android:selectable="false" android:summary="This option is always selected."/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_mostpopular"
            android:title="@string/title_mostpopular"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_investingstrategies"
            android:title="@string/title_investingstrategies"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_mortgages"
            android:title="@string/title_mortgages"/>
                
        <CheckBoxPreference
            android:key="subscriptionoptions_taxes"
            android:title="@string/title_taxes"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="subscriptionoptions_topic_basicmaterials"
        android:title="@string/title_basicmaterials">
        
        <CheckBoxPreference
            android:key="subscriptionoptions_OilGasRefiningMarketing"
            android:title="@string/title_OilGasRefiningMarketing"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_gold"
            android:title="@string/title_gold"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_silver"
            android:title="@string/title_silver"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_SteelIron"
            android:title="@string/title_SteelIron"/>
                
        <CheckBoxPreference
            android:key="subscriptionoptions_Synthetics"
            android:title="@string/title_Synthetics"/>
        
    </PreferenceCategory>
    
    
    <PreferenceCategory 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="subscriptionoptions_topic_financial"
        android:title="@string/title_financial">
        
        <CheckBoxPreference
            android:key="subscriptionoptions_AssetManagements"
            android:title="@string/title_AssetManagements"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_RealEstateDevelopment"
            android:title="@string/title_RealEstateDevelopment"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_CreditServices"
            android:title="@string/title_CreditServices"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_LifeInsurance"
            android:title="@string/title_LifeInsurance"/>
                
        <CheckBoxPreference
            android:key="subscriptionoptions_SavingsLoans"
            android:title="@string/title_SavingsLoans"/>
        
    </PreferenceCategory>

            
    <PreferenceCategory 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="subscriptionoptions_topic_healthcare"
        android:title="@string/title_healthcare">
        
        <CheckBoxPreference
            android:key="subscriptionoptions_HealthcarePlans"
            android:title="@string/title_HealthcarePlans"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_Hospitals"
            android:title="@string/title_Hospitals"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_MedicalInstrumentsSupplies"
            android:title="@string/title_MedicalInstrumentsSupplies"/>
        
    </PreferenceCategory>
        
            
    <PreferenceCategory 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="subscriptionoptions_topic_technology"
        android:title="@string/title_technology">
        
        <CheckBoxPreference
            android:key="subscriptionoptions_ApplicationSoftware"
            android:title="@string/title_ApplicationSoftware"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_HealthcareInformationServices"
            android:title="@string/title_HealthcareInformationServices"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_InternetSoftwareServices"
            android:title="@string/title_InternetSoftwareServices"/>
        
        <CheckBoxPreference
            android:key="subscriptionoptions_WirelessCommunications"
            android:title="@string/title_WirelessCommunications"/>
        
    </PreferenceCategory>
        
        
</PreferenceScreen>        